--- a/src/index.css
+++ b/src/index.css
@@ -1,29 +1,35 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-@layer components{
-    .bannerIcon{
-        @apply w-16 h-16 bg-black bg-opacity-25 text-gray-200 text-xl inline-flex items-center justify-center rounded-md shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-designColor cursor-pointer duration-300;
+@layer components {
+    .bannerIcon {
+        @apply w-16 h-16 bg-[#070F2B] bg-opacity-25 text-[#9290C3] text-xl inline-flex items-center justify-center rounded-md shadow-shadowOne hover:bg-opacity-40 hover:-translate-y-1 transition-all hover:text-[#9290C3] cursor-pointer duration-300;
     }
+
     .resumeLi {
-    @apply w-full h-20 bg-black bg-opacity-25 text-xl text-gray-300 flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
-         }
-.bgOpacity {
-@apply bg-black bg-opacity-40;
-                  }
-    .contactInput{
-        @apply w-full h-12 rounded-lg border-b-[1px] border-b-gray-600 bg-[#191b1e] text-lightText px-4 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300
+        @apply w-full h-20 bg-[#070F2B] bg-opacity-25 text-[#9290C3] text-xl flex justify-center cursor-pointer hover:bg-opacity-40 duration-300 items-center border-[1px] rounded-none;
     }
-.contactTextArea{
-    @apply w-full rounded-lg border-b-[1px] border-b-gray-600 bg-[#191b1e] text-lightText px-4 py-2 active:outline-none focus-visible:outline-designColor outline-none focus-visible:border-b-transparent duration-300 resize-none
-}
+
+    .bgOpacity {
+        @apply bg-[#070F2B] bg-opacity-40;
+    }
+
+    .contactInput {
+        @apply w-full h-12 rounded-lg border-b-[1px] border-b-[#535C91] bg-[#1B1A55] text-[#9290C3] px-4 active:outline-none focus-visible:outline-[#535C91] outline-none focus-visible:border-b-transparent duration-300;
+    }
+
+    .contactTextArea {
+        @apply w-full rounded-lg border-b-[1px] border-b-[#535C91] bg-[#1B1A55] text-[#9290C3] px-4 py-2 active:outline-none focus-visible:outline-[#535C91] outline-none focus-visible:border-b-transparent duration-300 resize-none;
+    }
 }
 
 .active {
     color: white;
 }
-.scrollbar-hide::-webkit-scrollbar{
+
+.scrollbar-hide::-webkit-scrollbar {
     display: none;
 }
